--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -24,11 +24,9 @@
       </form>
 
       <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
+        <% todos.forEach(todo => {%>
+          <li><%= todo.item %></li>
+        <% }) %>
       </ul>
     </div>
   </body>
