Handle add and delete

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -6,8 +6,9 @@
     <title>Todo list</title>
 
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
     ></script>
+    <script src="/assets/todo-list.js"></script>
 
     <link rel="shortcut icon" href="/assets/favicon.png" />
     <link rel="stylesheet" href="/assets/styles.css" />
